# Proyecto_DS_TheBridge

./: DS-GSC copy.ipynb  DS-GSC.ipynb  LEEME.txt  README.md  SITES_SMN_ESP.csv  URLs_Python_GSC_Spa_Web_10000.csv  URLs_Python_GSC_Spa_Web_Full.csv  esp_plus10000_sf.csv  pruebas_URLs.csv  setup.cfg
proyecto.egg-info/: PKG-INFO
src/mypackage/: DS-GSC-final.ipynb  DS_GSC_borrador.ipynb  Esp_plus_10000.csv  client_secret.json  client_secret_GA.json  credentiacel.pypirc  probar_gsc_python_madridscrt.csv
src/mypackage.egg-info/: SOURCES.txt
src/pryecto_ds_thebridge.egg-info/: PKG-INFO  SOURCES.txt
